Fix: example damage markers in help section are too low. Cause: `line-height` in site style moves markers down. Soln: set `line-height` for damage markers in help.

--- a/style/material.css
+++ b/style/material.css
@@ -240,6 +240,7 @@
 .editable .mll_sheet .help .pips > span,
 .mll_sheet .help .pips.current > span {
 	cursor: unset;
+	line-height: 1.1;
 }
 
 .mll_sheet .pips.demi > span,
